--- a/bcc0701/pom.xml
+++ b/bcc0701/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.chedacandalesborja</groupId>
-	<artifactId>bcc0700</artifactId>
+	<artifactId>bcc0601</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bcc0700</name>
-	<description>Ejercicio 7.0</description>
+	<name>bcc0601</name>
+	<description>Ejercicio 6.1 Modelo y Repositorios</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -66,24 +66,6 @@
 					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-log4j2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-spring-boot</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
