--- a/bcc0701/src/main/resources/application.properties
+++ b/bcc0701/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Ejercicio0700Apuntes
+spring.datasource.url=jdbc:mysql://localhost:3306/Ejercicio0701
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8085
