--- a/bcc0701/src/main/resources/application.properties
+++ b/bcc0701/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Ejercicio0701
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8085
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
