--- a/bcc0707/src/main/resources/application.properties
+++ b/bcc0707/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Ejercicio0701
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/data
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8085
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
