--- a/bcc0711/src/main/resources/application.properties
+++ b/bcc0711/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Ejercicio0711
 spring.datasource.username=root
 spring.datasource.password=
 server.port=9000
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
