--- a/bcc0906/pom.xml
+++ b/bcc0906/pom.xml
@@ -8,9 +8,11 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.chedacandalesborja</groupId>
 	<artifactId>bcc0601</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>bcc0601</name>
 	<description>Ejercicio 6.1 Modelo y Repositorios</description>
 	<properties>
@@ -73,6 +75,10 @@
 					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
