--- a/bcc0906/src/main/resources/application.properties
+++ b/bcc0906/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=
 server.port=8085
 spring.jpa.hibernate.ddl-auto=update
-
+logging.file.name=myapp.log
