--- a/bcc0906/src/main/resources/application.properties
+++ b/bcc0906/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=
 server.port=8085
 spring.jpa.hibernate.ddl-auto=update
 logging.file.name=myapp.log
+spring.output.ansi.enabled=always
