--- a/bcc0801/pom.xml
+++ b/bcc0801/pom.xml
@@ -12,15 +12,11 @@
 	<artifactId>bcc0601</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bcc0601</name>
-	<description>Ejercicio 6.1 Modelo y Repositorios</description>
+	<description>Ejercicio 8</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
